--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -352,7 +352,7 @@
 
   <!-- Resources -->
   <h2>Resources of prove about github (Daniel Velez)</h2>
-  <p>Here are some links to help you get started:</p>
+  <p>Here are some links to help you get started: (Victor Guillén)</p>
 
   <div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="https://angular.io/tutorial">
