--- a/front-end/src/app/components/home/home.component.html
+++ b/front-end/src/app/components/home/home.component.html
@@ -1,11 +1,4 @@
-<mat-toolbar class="toolbar">
-  <img src="../../../assets/images/Logo.svg" alt="Logo">
-  <span>  API PAISES</span>
-
-  <div class="spacer"></div>
-
-  <a mat-button [routerLink]="['/','Home']">Home</a>
-  <a mat-button>About us</a>
-  <a mat-raised-button [routerLink]="['/','Login']">Sign In</a>
-</mat-toolbar>
-<div class="div"></div>
+<body>
+  <div class="gradient"></div>
+  <div class="div-general"></div>
+</body>
