--- a/front-end/src/app/components/navvertical/navvertical.component.html
+++ b/front-end/src/app/components/navvertical/navvertical.component.html
@@ -20,7 +20,7 @@
               <a [routerLink]="['/NavVertical/RegisterCountries']">Add countries</a>
             </div>
             <div class="accordion-body">
-              <a [routerLink]="['/NavVertical/HomePage']">List countries</a>
+              <a [routerLink]="['/NavVertical/ListCountries']">List countries</a>
             </div>
           </div>
         </div>
