--- a/front-end/src/app/components/register/register.component.html
+++ b/front-end/src/app/components/register/register.component.html
@@ -1,8 +1,8 @@
 <body>
   <div class="gradient"></div>
   <div class="div-general">
-    <div class="div-logo"><span>
-        <mat-icon matSuffix>shield</mat-icon>
+    <div class="div-logo"><span class="spanL">
+        <img src="../../../assets/images/Logo.svg"/>
       </span></div>
     <br>
     <div class="div-name">
@@ -10,52 +10,58 @@
     </div>
     <br>
     <form class="div-cont-form">
-      <div class="card">
+      <div class="cardF">
         <div class="div-main-card">
-          <div class="div-top">
-            <div class="div-top-left"><h3>First name</h3></div>
-            <div class="div-top-right"><h3>Last name</h3></div>
-          </div>
-
           <div class="div-bottom">
-            <div class="div-bottom-left"><input type="text" class="inp-data"></div>
-            <div class="div-bottom-right"><input type="text" class="inp-data"></div>
+            <div class="input-group">
+              <span class="input-group-text">First and last name</span>
+              <input type="text" aria-label="First name" class="form-control">
+              <input type="text" aria-label="Last name" class="form-control">
+            </div>
           </div>
         </div>
         <br>
         <div class="div-main-email">
           <div class="div-top-ep">
-            <div class="div-top-all-ep"><h3>Email</h3></div>
           </div>
           <div class="div-bottom-ep">
-            <div class="div-bottom-all-ep"><input type="email" class="inp-ep"></div>
+            <div class="input-group">
+              <span class="input-group-text">Email</span>
+              <input type="email" aria-label="Email" class="form-control">
+            </div>
           </div>
         </div>
         <br>
         <div class="div-main-user">
           <div class="div-top-ep">
-            <div class="div-top-all-ep"><h3>Username</h3></div>
           </div>
           <div class="div-bottom-ep">
-            <div class="div-bottom-all-ep"><input type="text"class="inp-ep"></div>
+            <div class="input-group">
+              <span class="input-group-text">User</span>
+              <input type="text" aria-label="User" class="form-control">
+            </div>
           </div>
         </div>
         <br>
         <div class="div-main-pass">
           <div class="div-top-ep">
-            <div class="div-top-all-ep"><h3>Password</h3></div>
           </div>
           <div class="div-bottom-ep">
-            <div class="div-bottom-all-ep"><input type="password" class="inp-ep"></div>
+            <div class="input-group">
+              <span class="input-group-text">Password</span>
+              <input type="password" aria-label="Password" class="form-control">
+            </div>
           </div>
         </div>
         <br>
         <div class="div-main-phone">
           <div class="div-top-ep">
-            <div class="div-top-all-ep"><h3>Phone</h3></div>
           </div>
           <div class="div-bottom-ep">
-            <div class="div-bottom-all-ep"><input type="text" class="inp-ep"></div>
+            <div class="input-group">
+              <span class="input-group-text">Phone</span>
+              <input type="text" aria-label="Phone" class="form-control">
+            </div>
           </div>
         </div>
         <div class="div-main-buttons">
