--- a/front-end/src/app/components/home/home.component.sass
+++ b/front-end/src/app/components/home/home.component.sass
@@ -1,37 +1,20 @@
-.spacer
-  flex: 1 1 auto
+body
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
 
-.toolbar
-  position: fixed
-  background-color: #168AAD
-  box-shadow: 0 0 50px #ccc
+body
+  .gradient
+    position: fixed
+    width: 100%
+    height: 100vh
+    //background-image: linear-gradient(#CCFF33, #9EF01A, #70E000, #38B000, #008000, #007200, #006400, #004B23)
+    background-image: url('../../../assets/images/Home.PNG')
+    background-repeat: no-repeat
+    background-size: cover
+    filter: blur(6px)
+    border: none
 
 
-.toolbar
-  span
-    color: #FFFFFF
-    margin-left: 10px
-
-.toolbar a
-      &:nth-last-child(2), &:nth-last-child(3)
-        color: #FFFFFF
-      &:nth-last-child(1)
-        font-size: bold
-        letter-spacing: 2px
-
-
-
-
-
-
-.toolbar
-  img
-    width: 40px
-    height: 40px
-
-
-.div
-  height: 2000px
-  width: 100%
-  background-color: red
+.div-general
+  height: 100vh
+  position: relative
