--- a/front-end/src/app/components/login/login.component.html
+++ b/front-end/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
 
   <div class="div-general">
     <div class="div-logo"><span>
-        <mat-icon matSuffix>shield</mat-icon>
+        <img src="../../../assets/images/Logo.svg"/>
       </span></div>
     <br>
     <div class="div-name">
@@ -29,7 +29,7 @@
             </div>
           </div>
           <br>
-          <button mat-raised-button class="sig-in">Sig in</button>
+          <button mat-raised-button class="sig-in" [routerLink]="['/','NavVertical']">Sig in</button>
         </div>
       </div>
     </div>
