--- a/front-end/src/app/components/navvertical/navvertical.component.sass
+++ b/front-end/src/app/components/navvertical/navvertical.component.sass
@@ -40,3 +40,12 @@
     a
       text-decoration: none
       color: #000000
+
+
+@media screen and (max-width: 700px)
+  .direction
+    display: block
+
+  .nav-vertical
+    margin-left: auto
+    margin-right: auto
