--- a/front-end/src/app/components/register/register.component.sass
+++ b/front-end/src/app/components/register/register.component.sass
@@ -19,9 +19,11 @@ $widthmat-form-inp: 50%
   letter-spacing: -0.5px
   color: #000000
   font-weight: 500
+  font-size: 18px
 
 
-
+body
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
 body
   .gradient
@@ -29,7 +31,7 @@ body
     width: 100%
     height: 100vh
     //background-image: linear-gradient(#CCFF33, #9EF01A, #70E000, #38B000, #008000, #007200, #006400, #004B23)
-    background-image: linear-gradient(240deg, #0D47A1, #90CAF9)
+    background-image: linear-gradient(300deg, #0D47A1, #90CAF9)
     opacity: 0.7
 
 .div-general
@@ -41,12 +43,13 @@ body
     @include contents()
     height: 75px
 
-  span
+  .spanL
+    margin-top: 5px
     border: $border
-    width: 45px
-    height: 45px
+    width: 75px
+    height: 75px
     border-radius: 50%
-    background-color: #168AAD
+    background-color: transparent
     border: 0 solid #168AAD
     @include contents()
 
@@ -62,19 +65,20 @@ body
     padding-bottom: 50px
 
 .div-logo
-  .icon
-    width: 100%
-    height: 100%
+  .spanL
+    img
+      width: 70px
+      height: 70px
+
 
 .div-name
   h1
     font-size: 24px
-    font-weight: 300
     letter-spacing: -0.5px
     color: #000000
-    font-weight: 500
+    font-weight: bold
 
-.card
+.cardF
   width: auto
   height: auto
   box-sizing: border-box
@@ -88,7 +92,7 @@ body
   //box-shadow: 0px 0px 5px 2px rgba(255,255,255,1)
 
 
-.card
+.cardF
   .div-main-card, .div-main-email
     width: 100%
     height: auto
@@ -107,6 +111,13 @@ body
     height: 39px
     @include contents()
 
+span
+   background-color: #168AAD
+   color: #000000
+   font-weight: bold
+   border: none
+   width: 160px
+   justify-content: center
 
 .div-top
   .div-top-left
@@ -139,7 +150,7 @@ body
   .inp-data
     margin-top: 5px
     margin-left: 5px
-    width: 150px
+    width: 172px
     border-radius: 6px
     font-size: 14px
     line-height: 20px
@@ -147,13 +158,14 @@ body
     background-repeat: no-repeat
     background-position: right 8px center
     outline: none
-    height: 19px
+    height: 30px
     color: #000000
     padding: 5px 12px
     border: 1px solid #c9d1d9
-    background-color: #c9d1d9
+    background-color: #ffffff
 
-
+.form-control
+  background-color: #c9d1d9
 
 .div-main-email, .div-main-phone, .div-main-user, .div-main-pass, .div-main-buttons
   .div-top-ep
@@ -195,11 +207,11 @@ body
     background-repeat: no-repeat
     background-position: right 8px center
     outline: none
-    height: 19px
+    height: 30px
     color: #000000
     padding: 5px 12px
     border: 1px solid #c9d1d9
-    background-color: #c9d1d9
+    background-color: #ffffff
 
 
 .div-bottom-all-ep
