--- a/front-end/src/app/components/about/about.component.html
+++ b/front-end/src/app/components/about/about.component.html
@@ -29,7 +29,17 @@
     </div>
   </div>
   <div class="first-collaborators">
-    <div class="coll-one"></div>
-    <div class="coll-two"></div>
+    <div class="coll-one">
+      <div class="cont-photo"><img src="../../../assets/images/male-user.svg" alt="Manager Three" class="photo"></div>
+      <div class="cont-name"><h3 class="name">Duval Ricardo Carvajal Suárez</h3></div>
+      <div class="cont-level-ac"><h3 class="level-ac">Teaching Assistant</h3></div>
+      <div class="cont-bottom"><h3 class="bottom">Collaborator</h3></div>
+    </div>
+    <div class="coll-two">
+      <div class="cont-photo"><img src="../../../assets/images/male-user.svg" alt="Manager Three" class="photo"></div>
+      <div class="cont-name"><h3 class="name">Ariel Oswaldo Fernández Loor</h3></div>
+      <div class="cont-level-ac"><h3 class="level-ac">Teaching Assistant</h3></div>
+      <div class="cont-bottom"><h3 class="bottom">Collaborator</h3></div>
+    </div>
   </div>
 </div>
