--- a/front-end/src/app/components/listcountries/listcountries.component.sass
+++ b/front-end/src/app/components/listcountries/listcountries.component.sass
@@ -5,6 +5,15 @@
   box-sizing: border-box
 
 
+.choose
+  font-size: 18px
+  padding-right: 5px
+
+.seleccion
+  width: 200px
+  border-radius: 5px
+  cursor: pointer
+
 
 .direction
   display: flex
@@ -48,6 +57,16 @@ form
   width: 100%
 
 
+.table
+  td
+    img
+      width: 100px
+
+.div-table
+  .div-paginator
+    width: 100%
+    height: auto
+    @include display()
 
 @media screen and (max-width: 1030px)
   .container-sm
