--- a/front-end/src/app/components/listprovincies/listprovincies.component.sass
+++ b/front-end/src/app/components/listprovincies/listprovincies.component.sass
@@ -47,6 +47,14 @@ form
 .div-table
   width: 100%
 
+.div-table
+  .div-paginator
+    width: 100%
+    height: auto
+    @include display()
+
+
+
 
 
 @media screen and (max-width: 1030px)
