--- a/front-end/src/app/components/navhorizontal/navhorizontal.component.html
+++ b/front-end/src/app/components/navhorizontal/navhorizontal.component.html
@@ -1,7 +1,7 @@
 <nav class="nav justify-content-center">
   <li class="nav-item center">
     <a class="nav-link active" [routerLink]="['/','Home']" aria-current="page" href="#">
-      <img src="../../../assets/images/Logo.svg" alt="Logo" width="50" height="50" class="d-inline-block align-text-top"/>
+      <!--<img src="" width="50" height="50" class="d-inline-block align-text-top"/>-->
     </a>
   </li>
   <li class="nav-item right">
