--- a/front-end/src/app/components/navhorizontal/navhorizontal.component.sass
+++ b/front-end/src/app/components/navhorizontal/navhorizontal.component.sass
@@ -11,4 +11,7 @@
     margin-left: auto
 
 .justify-content-center
-  background-color: #2196F3
+  background-color: #0D0C1F
+
+.btn
+  background-color: #3E3B8E
