--- a/front-end/src/app/components/about/about.component.sass
+++ b/front-end/src/app/components/about/about.component.sass
@@ -125,7 +125,7 @@ $border:1px solid red
     margin-top: 90px
 
 
-.manager-one,.manager-two, .manager-three
+.manager-one,.manager-two, .manager-three, .coll-one, .coll-two
   .cont-photo
     width: 100%
     height: 150px
@@ -148,6 +148,22 @@ $border:1px solid red
     background-color: #0D0C1F
     @include display()
 
+.first-collaborators
+  margin-top: 50px
+  width: 100%
+  height: 500px
+  position: relative
+  @include display()
+
+  .coll-one, .coll-two
+    width: 350px
+    height: 425px
+    margin-left: 10px
+    margin-right: 10px
+    box-shadow: 0 15px 40px -10px rgb(0 0 0 / 30%)
+    background-color: #FFFFFF
+    position: relative
+
 .photo
   width: 150px
   height: 150px
@@ -164,19 +180,4 @@ $border:1px solid red
   font-size: 1.35em
   color: #FFFFFF
 
-.first-collaborators
-  margin-top: 50px
-  width: 100%
-  height: 500px
-  position: relative
-  @include display()
-  border: $border
 
-  .coll-one, .coll-two
-    width: 350px
-    height: 425px
-    margin-left: 10px
-    margin-right: 10px
-    box-shadow: 0 15px 40px -10px rgb(0 0 0 / 30%)
-    background-color: #FFFFFF
-    border: $border
