--- a/front-end/src/app/components/navvertical/navvertical.component.sass
+++ b/front-end/src/app/components/navvertical/navvertical.component.sass
@@ -20,7 +20,7 @@
   width: 300px
   height: 55px
   border: 1px solid #c9d1d9
-  background-color: #2196F3
+  background-color: #0D0C1F
   @include contents()
 
 .title-api
