--- a/front-end/src/app/components/listprovincies/listprovincies.component.sass
+++ b/front-end/src/app/components/listprovincies/listprovincies.component.sass
@@ -19,6 +19,16 @@
   h1
 
 
+.choose
+  font-size: 18px
+  padding-right: 5px
+
+.seleccion
+  width: 200px
+  border-radius: 5px
+  cursor: pointer
+
+
 .div-general
   margin-top: 100px
   margin-left: 5%
@@ -45,7 +55,11 @@ form
 
 
 .div-table
-  width: 100%
+  width: 95%
+  overflow-x: scroll
+  overflow-y: scroll
+  height: 500px
+
 
 .div-table
   .div-paginator
@@ -55,7 +69,13 @@ form
 
 
 
-
+td
+  img
+    width: 100px
+    height: 100px
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
 
 @media screen and (max-width: 1030px)
   .container-sm
