--- a/front-end/src/app/components/regcountries/regcountries.component.html
+++ b/front-end/src/app/components/regcountries/regcountries.component.html
@@ -1,5 +1,5 @@
 <div class="direction">
-  <div>
+  <div class="dir-div">
     <div class="title">
       <h1>Register a country</h1>
     </div>
@@ -7,30 +7,27 @@
       <form [formGroup]="newForm" (ngSubmit)="postForm(newForm.value)">
         <fieldset>
           <legend>Country</legend>
-          <div class="container-sm">
-            <div class="form-floating mb-3">
-              <input type="text" formControlName="name" class="form-control" id="countryname" placeholder="Italia">
+            <div class="form-floating mb-3 space">
+              <input type="text" formControlName="name" class="form-control" id="name" placeholder="Italia">
               <label for="floatingInput">Country name</label>
             </div>
             <div class="form-floating space">
-              <input type="text" formControlName="englishName" class="form-control" id="englishname" placeholder="Italy">
+              <input type="text" formControlName="englishName" class="form-control" id="englishName" placeholder="Italy">
               <label for="floatingInput">English name</label>
             </div>
-            <div class="form-floating space">
-              <input type="text" formControlName="flag" class="form-control" id="flag" placeholder="URL">
-              <label for="floatingInput">Flag (URL)</label>
-            </div>
-            <div class="form-floating space">
-              <input type="text" formControlName="capital" class="form-control" id="capital" placeholder="Roma">
-              <label for="floatingInput">Capital</label>
-            </div>
+          <div class="form-floating space">
+            <input type="text" formControlName="flag" class="form-control" id="flag" placeholder="URL">
+            <label for="floatingInput">Flag (URL)</label>
+          </div>
+          <div class="form-floating space">
+            <input type="text" formControlName="capital" class="form-control" id="capital" placeholder="Roma">
+            <label for="floatingInput">Capital</label>
           </div>
         </fieldset>
         <br>
         <fieldset>
           <legend>Coordinates</legend>
-          <div class="container-sm">
-            <div class="form-floating mb-3">
+            <div class="form-floating mb-3 space">
               <input type="text" formControlName="latitude" class="form-control" id="latitude" placeholder="Italia">
               <label for="floatingInput">Latitude</label>
             </div>
@@ -38,36 +35,34 @@
               <input type="text" formControlName="longitude" class="form-control" id="longitude" placeholder="Italy">
               <label for="floatingInput">Longitude</label>
             </div>
-          </div>
         </fieldset>
         <br>
         <fieldset>
           <legend>Country codes</legend>
-          <div class="container-sm">
-            <div class="form-floating mb-3">
-              <input type="text" formControlName="tld" class="form-control" id="tld" placeholder="Italia">
+            <div class="form-floating mb-3 space">
+              <input type="text" formControlName="countryCodes" class="form-control" id="tld" placeholder="Italia">
               <label for="floatingInput">TLD</label>
             </div>
             <div class="form-floating space">
-              <input type="text" formControlName="iso3" class="form-control" id="iso3" placeholder="Italy">
+              <input type="text" formControlName="countryCodes" class="form-control" id="iso3" placeholder="Italy">
               <label for="floatingInput">ISO 3</label>
             </div>
             <div class="form-floating space">
-              <input type="text" formControlName="iso2" class="form-control" id="iso2" placeholder="Italy">
+              <input type="text" formControlName="countryCodes" class="form-control" id="iso2" placeholder="Italy">
               <label for="floatingInput">ISO 2</label>
             </div>
             <div class="form-floating space">
-              <input type="text" formControlName="fips" class="form-control" id="fips" placeholder="Italy">
+              <input type="text" formControlName="countryCodes" class="form-control" id="fips" placeholder="Italy">
               <label for="floatingInput">fips</label>
             </div>
             <div class="form-floating space">
-              <input type="text" formControlName="ison" class="form-control" id="ison" placeholder="Italy">
+              <input type="text" formControlName="countryCodes" class="form-control" id="ison" placeholder="Italy">
               <label for="floatingInput">isoN</label>
             </div>
-          </div>
         </fieldset>
         <div class="d-grid gap-1 d-md-block btn-position">
-          <button class="btn btn-success" type="submit" id="btn-register">Register</button>
+          <button class="btn btn-success" type="submit" id="btn-register" [disabled]="newForm.invalid">Register</button>
+          <button class="btn btn-danger" type="submit" id="btn-cancel">Cancel</button>
         </div>
       </form>
     </div>
