--- a/front-end/src/app/components/slider/slider.component.html
+++ b/front-end/src/app/components/slider/slider.component.html
@@ -14,7 +14,7 @@
   <div class="div-info-img">
     <div class="div-main">
     <ng-container *ngFor="let section of items;">
-      <div class="div-img-true" [ngStyle]="{'margin-top': section.marginTop+'px'}">
+      <div class="div-img-true" [ngStyle]="{'margin-top': section.marginTop+'%'}">
         <img src="{{section.link}}"/>
       </div>
     </ng-container>
