--- a/front-end/src/app/components/home/home.component.sass
+++ b/front-end/src/app/components/home/home.component.sass
@@ -71,8 +71,8 @@ body
       left: 10%
     &:nth-child(2)
       left: 20%
-      width: 80px
-      height: 80px
+      width: 60px
+      height: 60px
       animation-delay: 2s
       animation-duration: 17s
     &:nth-child(3)
@@ -80,8 +80,8 @@ body
       animation-delay: 4s
     &:nth-child(4)
       left: 40%
-      width: 60px
-      height: 60px
+      width: 80px
+      height: 80px
       animation-duration: 22s
       background-color: fade(white, 25%)
     &:nth-child(5)
@@ -124,17 +124,25 @@ body
 
 
 .div-general
-  height: 85vh
+  height: 100vh
   position: relative
-  @include display()
 
 
 .menu-right-v
-  height: 85vh
+  height: 10vh
   position: relative
-  width: 5%
+  width: 100%
   margin-left: auto
   z-index: 101
+  @include display()
+  justify-content: flex-end
+  padding-right: 20px
+
+
+.menu-right-v
+  a
+    margin-left: 20px
+
 
 
 .menu-right-v
@@ -144,10 +152,7 @@ body
       font-size: .85em
       font-weight: 600
       letter-spacing: 5px
-      transform: rotate(90deg)
-      margin-top: 85px
       font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-
 
 .menu-right-v
   a
@@ -155,8 +160,8 @@ body
 
 
 .div-call-components
-  width: 95%
-  height: 85vh
+  width: 100%
+  height: 75vh
   position: relative
   @include display()
 
@@ -165,7 +170,7 @@ body
   border-left: 1px solid #FFFFFF
   border-bottom: 1px solid #FFFFFF
   width: auto
-  height: 40%
+  height: 40vh
   margin-left: 50px
   @include display()
   overflow: hidden
@@ -293,7 +298,7 @@ body
 .info-all-countries
   .div-cuadros
     width: 30%
-    height: 325px
+    height: 300px
     background-image: url('../../../assets/images/Home-Registros.svg')
     background-repeat: no-repeat
     background-attachment: contain
@@ -301,13 +306,13 @@ body
     background-position: center
   .div-info
     width: 70%
-    height: 300px
+    height: auto
     @include display()
 
 .div-info
   .div-details
     width: 100%
-    height: 200px
+    height: auto
     margin-bottom: 100px
     @include display()
 
@@ -326,7 +331,6 @@ body
       list-style: none
       width: 35%
       height: auto
-      justify-content: left
 
 
 .div-details
@@ -364,3 +368,44 @@ body
     background-position: center
     transform: rotate(180deg)
     @include display()
+
+
+
+
+//Media Query
+@media screen and (max-width: 702px)
+
+  .div-info
+    .div-details
+      width: 100%
+      height: auto
+      @include display()
+
+
+  .div-details
+    ul
+      display: block
+      text-align: center
+      width: auto
+
+  .div-details
+    ul
+      li
+        list-style: none
+        width: auto
+        height: auto
+
+
+
+
+@media screen and (max-width: 382px)
+  .div-details
+    ul
+      li
+        .number
+          font-size: 36px
+          font-weight: bold
+          color: #2D2B6A
+        p
+          font-size: .3em
+          font-weight: bold
