--- a/front-end/src/app/components/navvertical/navvertical.component.html
+++ b/front-end/src/app/components/navvertical/navvertical.component.html
@@ -22,25 +22,8 @@
             <div class="accordion-body">
               <a [routerLink]="['/NavVertical/ListCountries']">List countries</a>
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-            aria-controls="panelsStayOpen-collapseTwo">
-            Cities
-          </button>
-        </h2>
-        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
-          aria-labelledby="panelsStayOpen-headingTwo">
-          <div class="accordion-body">
             <div class="accordion-body">
-              <a>Add cities</a>
-            </div>
-            <div class="accordion-body">
-              <a>List cities</a>
+              <a [routerLink]="['/NavVertical/DeleteCountrys']">Delete countries</a>
             </div>
           </div>
         </div>
@@ -57,10 +40,36 @@
           aria-labelledby="panelsStayOpen-headingThree">
           <div class="accordion-body">
             <div class="accordion-body">
-              <a>Add provinces</a>
+              <a [routerLink]="['/NavVertical/RegisterProvincies']">Add provinces</a>
             </div>
             <div class="accordion-body">
               <a [routerLink]="['/NavVertical/ListProvincies']">List provinces</a>
+            </div>
+            <div class="accordion-body">
+              <a [routerLink]="['/NavVertical/DeleteProvinces']">Delete provinces</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseTwo">
+            Cities
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingTwo">
+          <div class="accordion-body">
+            <div class="accordion-body">
+              <a [routerLink]="['/NavVertical/RegisterCity']">Add cities</a>
+            </div>
+            <div class="accordion-body">
+              <a [routerLink]="['/NavVertical/ListCities']">List cities</a>
+            </div>
+            <div class="accordion-body">
+              <a [routerLink]="['/NavVertical/DeleteCitites']">Delete cities</a>
             </div>
           </div>
         </div>
