--- a/front-end/src/app/components/navvertical/navvertical.component.sass
+++ b/front-end/src/app/components/navvertical/navvertical.component.sass
@@ -1,3 +1,6 @@
+$border: 1px solid red
+
+
 @mixin contents()
     display: flex
     justify-content: center
@@ -5,11 +8,12 @@
     box-sizing: border-box
 
 
+
 .direction
   display: flex
 
 .routings
-  width: 100%
+  width: calc( 100% - 300px )
   height: auto
 
 .nav-vertical
@@ -29,6 +33,19 @@
     color: #FFFFFF
 
 
+.accordion
+  height: 362px
+  overflow-y: auto
+  box-sizing: border-box
+  &::-webkit-scrollbar
+    width: 5px
+    background-color: rgba(13, 12, 31, .5)
+    border-radius: 5px
+  &::-webkit-scrollbar-thumb
+    background-color: #0D0C1F
+    border-radius: 5px
+
+
 .accordion-body
   .accordion-body
     &:hover
@@ -45,7 +62,11 @@
 @media screen and (max-width: 700px)
   .direction
     display: block
+    width: 100%
 
   .nav-vertical
     margin-left: auto
     margin-right: auto
+
+  .routings
+    width: 100%
