--- a/front-end/src/app/components/regprovincies/regprovincies.component.sass
+++ b/front-end/src/app/components/regprovincies/regprovincies.component.sass
@@ -22,7 +22,8 @@ $border: 1px solid red
   width: 80%
   @include display()
   justify-content: flex-start
-  height: 75vh
+  padding-bottom: 50px
+  height: 500px
   overflow-y: scroll
   &::-webkit-scrollbar
     width: 5px
@@ -33,6 +34,8 @@ $border: 1px solid red
     border-radius: 5px
 
 
+.form-select
+  cursor: pointer
 
 .space
   margin-left: 20px
@@ -45,7 +48,7 @@ form
 
 
 .btn-position
-  @include display()
+  text-align: left
   margin-top: 10px
   margin-left: 20px
 
@@ -65,6 +68,7 @@ form
     margin-left: auto
     margin-top: 10px
 
+
   .btn-position
     margin-top: 10px
     margin-left: 0px
@@ -72,21 +76,6 @@ form
 
 
 @media screen and (max-width: 768px)
-  .btn-success, .btn-danger
-    margin-left: 0px
-    width: 100%
-    margin-top: 10px
-
-
-@media screen and (max-width: 700px)
-  .direction
-    width: 100%
-    @include display()
-
-
-  .dir-div
-    width: 100%
-
   .btn-success, .btn-danger
     margin-left: 0px
     width: 100%
